# simple-example-for-llama.cpp

./: CMakeLists.txt  README.md  simple.cpp
